# tba-openapi-rust

./: Cargo.toml  README.md  generate.sh  update_openapi_definition.sh
.openapi-generator/: FILES
docs/: DistrictApi.md  DistrictRanking.md  DistrictRankingEventPointsInner.md  EliminationAllianceBackup.md  EventApi.md  EventDistrictPoints.md  EventDistrictPointsPointsValue.md  EventDistrictPointsTiebreakersValue.md  EventOprs.md  EventRanking.md  EventRankingExtraStatsInfoInner.md  EventRankingRankingsInner.md  EventRankingSortOrderInfoInner.md  ListApi.md  Match.md  MatchApi.md  MatchScoreBreakdown2022.md  MatchScoreBreakdown2022Alliance.md  MatchVideosInner.md  Media.md  TbaApi.md  TeamApi.md  TeamEventStatusAllianceBackup.md  TeamEventStatusRank.md  TeamEventStatusRankSortOrderInfoInner.md  Webcast.md
src/apis/: configuration.rs  district_api.rs  event_api.rs  list_api.rs  match_api.rs  mod.rs  tba_api.rs  team_api.rs
src/models/: api_status.rs  api_status_app_version.rs  award.rs  award_recipient.rs  district_list.rs  district_ranking.rs  district_ranking_event_points_inner.rs  elimination_alliance.rs  elimination_alliance_backup.rs  elimination_alliance_status.rs  event.rs  event_district_points.rs  event_district_points_points_value.rs  event_district_points_tiebreakers_value.rs  event_insights.rs  event_insights_2016.rs  event_insights_2017.rs  event_insights_2018.rs  event_oprs.rs  event_ranking.rs  event_ranking_extra_stats_info_inner.rs  event_ranking_rankings_inner.rs  event_ranking_sort_order_info_inner.rs  event_simple.rs  match_alliance.rs  (+36 more)
